# Memoria-Cache-Simulacion

./: .gitignore  CMakeLists.txt  Makefile  README.md
main/: main.c
src/: cache.c  cache.h  memoria_principal.c  memoria_principal.h
tests/: cache_tests.c  cache_tests.h  main.c  testing.c  testing.h
